Fixed alignment issue with weather icon and temperature

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -12,11 +12,10 @@
 
 .Weather h1 {
   color: #878787;
-
   display: block;
   font-size: 24px;
   font-weight: 100;
-  height: 28px;
+  height: 35px;
   margin: 20px 0 0 0;
   line-height: 28.8px;
 }
@@ -29,14 +28,13 @@
 .Weather li {
   font-size: 16px;
   font-weight: 200;
-  height: 16px;
+  height: 20px;
   line-height: 16px;
   list-style: none;
 }
 
-.Weather canvas {
+.Weather .float-left {
   margin-right: 10px;
-  margin-top: 5px;
   display: inline-block;
 }
 
